--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,14 @@
 {
+  "go.useLanguageServer": true,
+  "[go]": {
+      "editor.snippetSuggestions": "none",
+      "editor.formatOnSave": true,
+      "editor.codeActionsOnSave": {
+          "source.organizeImports": true
+      }
+  },
+  "gopls": {
+      "usePlaceholders": true // add parameter placeholders when completing a function
+  },
+  "files.eol": "\n", // formatting only supports LF line endings
 }
